@@ -1,3 +1,7 @@
+2018-11-15 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
+
+		* add function time_stamp
+
 2018-11-12 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
 		* rename function format_filenames params 'prefix>suffix;profix>prefix'
